kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rps-service
  namespace: rps-app
spec:
  selector:
    app: rps-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
