kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rps-ingress
  namespace: rps-app
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: "rps.thyrail.de"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rps-service
            port:
              number: 80
  tls:
  - hosts:
    - "rps.thyrail.de"
    secretName: rps-tls-secret
